@@ -1,4 +1,5 @@
     * Fix running in deobfuscated environments when no mapping is available.
+    * Add the ability to use forge deobfuscation data if found.
 
 1.0.2:
     * Fix the tweak manager creating a class mapping for every loaded class, fixes #1.
